--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "da-burger-app",
   "version": "1.0.0",
-  "description": "burger muncher app",
+  "description": "eat-da-burger app",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
